Added new key bindings

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -456,7 +456,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left" width="129">&nbsp;</TD>
 <TD ALIGN="left" width="141">&nbsp;</TD>
 <TD ALIGN="left" width="81">
-  <p align="left">&nbsp;</TD>
+  <p align="left">(JDT editor) Content Assist (Simplified Chinese)</TD>
 <TD ALIGN="left" width="109">&nbsp;</TD>
 </tr>
 <tr>
@@ -488,6 +488,17 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left" height="32" width="76">&nbsp;</TD>
 <TD ALIGN="left" height="32" width="83">&nbsp;</TD>
 <TD ALIGN="left" height="32" width="92">&nbsp;</TD>
+</tr>
+<tr>
+<TD ALIGN="left" height="32" width="81">Question Mark (?)</TD>
+<TD ALIGN="left" height="32" width="67"></TD>
+<TD ALIGN="left" height="32" width="80"></TD>
+<TD ALIGN="left" height="32" width="76"></TD>
+<TD ALIGN="left" height="32" width="76"></TD>
+<TD ALIGN="left" height="32" width="76"></TD>
+<TD ALIGN="left" height="32" width="83">(JDT editor) Parameter Hints&nbsp;(Simplified
+  Chinese)</TD>
+<TD ALIGN="left" height="32" width="92"></TD>
 </tr>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Left Arrow</TD>
@@ -1244,7 +1255,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Underscore(_)</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left">Edit/Undo</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
